Fix app menu borders for RTL

BUG=612485
TEST=Set to RTL language, open main browser (app) menu, observe that
button separators in Zoom and Edit rows are properly placed, e.g.

[ ]  |  +  100%  -  |   Zoom

Paste | Copy | Cut |   Edit

Review-Url: https://codereview.chromium.org/1988983004
Cr-Commit-Position: refs/heads/master@{#394850}

Former-commit-id: e7a1a61e269ba16a335eab35a6eab3e1ae1b30b6